--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -45,6 +45,7 @@ pager = "less"
 
 [diff]
     exclude = ["scripts"]
+    pager = "diff-so-fancy | less --tabs=4 -RFX"
 
 [gpg]
     recipient = {{ $gpgkey | quote }}
