--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -9,16 +9,10 @@
 #
 # {{- /* This file supports Go's text/template language. */ -}}
 #
-# Sources:
-#     https://delicious-insights.com/en/posts/mastering-git-submodules/
-#     https://github.com/haacked/dotfiles
-#     https://github.com/holman/dotfiles
-#     https://github.com/jayharris/dotfiles-windows
-#     https://github.com/mathiasbynens/dotfiles
-#     https://git-scm.com/docs/git-config/
 
 [core]
     sshcommand = "plink -agent"
+    pager = "diff-so-fancy | less --tabs=4 -RFX"
 
 [gc]
     auto = 256
@@ -66,7 +60,7 @@
     textconv = gpg --no-tty --decrypt
 
 [gpg]
-    program = {{ output "scoop" "which" "gpg" | trim | splitList `\` | join `\\` }}
+    program = "{{ mustRegexReplaceAll `\\` .chezmoi.homeDir `\\` }}{{ output "scoop" "which" "gpg" | trim | trimPrefix "~" | splitList `\` | join `\\` |  }}"
 
 [pull]
     ff = only
