--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -60,6 +60,7 @@
     textconv = gpg --no-tty --decrypt
 
 [gpg]
+    # fuck this entire line of shenanigans...
     program = "{{ mustRegexReplaceAll `\\` .chezmoi.homeDir `\\` }}{{ output "scoop" "which" "gpg" | trim | trimPrefix "~" | splitList `\` | join `\\` |  }}"
 
 [pull]
