--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -13,6 +13,7 @@
 [core]
     sshcommand = "plink -agent"
     pager = "diff-so-fancy | less --tabs=4 -RFX"
+    autocrlf = input
 
 [gc]
     auto = 256
