fix diff commands and colors

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -45,7 +45,7 @@ pager = "less"
 
 [diff]
     exclude = ["scripts"]
-    pager = "diff-so-fancy | less --tabs=4 -RFX"
+    pager = "diff-so-fancy"
 
 [gpg]
     recipient = {{ $gpgkey | quote }}
