--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -38,6 +38,15 @@
     new = green bold
     whitespace = red reverse
 
+[color "diff-highlight"]
+    oldNormal = red bold
+    oldHighlight = red bold 52
+    newNormal = green bold
+    newHighlight = green bold 22
+
+[diff-so-fancy]
+    first-run = false
+
 [commit]
     gpgsign = true
 
