--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -11,6 +11,7 @@
 #
 
 [core]
+    sshcommand = "C:/Windows/System32/OpenSSH/ssh.exe"
     pager = "diff-so-fancy | less --tabs=4 -RFX"
     autocrlf = input
 
