--- a/run_powershell.bat.tmpl
+++ b/run_powershell.bat.tmpl
@@ -1,5 +1,5 @@
 {{ if eq .chezmoi.os "windows" -}}
-:: -*-mode:bat-*- vim:ft=bat
+:: -*-mode:bat-*- vim:ft=dosbatch
 
 :: ~/.local/share/chezmoi/run_powershell.bat
 :: ============================================================================
