update git config

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -13,7 +13,7 @@
 [core]
     sshcommand = "C:/Windows/System32/OpenSSH/ssh.exe"
     pager = "diff-so-fancy | less --tabs=4 -RFX"
-    autocrlf = input
+    autocrlf = false
 
 [gc]
     auto = 256
